--- a/templates/caselog/index.ejs
+++ b/templates/caselog/index.ejs
@@ -145,13 +145,14 @@
                 <div class="accTrigger">
 
                   <h5>
-                    <span class="accIcon iconSize"></span>
+                    <span class="accIcon iconSizeS"></span>
 
                     <span class="TextPoppins fontWeight400">My focus: </span>
                     Aligning the mobile app and partner tools with the company's shift to a gear-first rental model. I worked across core B2C and B2B flows to simplify UX, improve clarity, and support conversion.
                   </h5>
                 </div>
                 <div class="accContent">
+                  <div class="element">
 
                   <ul class="listCircle ">
                     <li>Before I joined, the team had redesigned the gear-first website in mid-2024. I supported final refinements and helped launch it in early 2025.
@@ -159,7 +160,7 @@
                     <li>
                       The company will rebrand as GoQuip in 2025, expanding from baby gear only to general gear rental.
                     </li>
-                  </ul>
+                  </ul></div>
                 </div>
 
 
@@ -171,32 +172,36 @@
                 <div class="accTrigger">
 
                   <h5>
-                    <span class="accIcon iconSize"></span>
+                    <span class="accIcon iconSizeS"></span>
 
                     <span class="TextPoppins fontWeight400">Impact: </span>
                     Increased clarity and mobile conversion by simplifying key decisions and aligning with gear-first web logic.
                   </h5>
+
                 </div>
                 <div class="accContent">
-                  <ul class="listCircle">
-                    <li>Rebuilt gear first flow overall in wireframe, test early, ensure everything works proper, saving time for later on back and force <span class="bulletWithArrow"></span>
-                    </li>
-                    <li>Rebuilt trip input flow with progressive disclosure (support quick edits or skips)(outbound icon)
+                  <div class="element">
 
-                    </li>
-                    <li>
-                      Simplified category discovery to reduce time-to-cart
+                    <ul class="listCircle">
+                      <li>Rebuilt gear first flow overall in wireframe, test early, ensure everything works proper, saving time for later on back and force <span class="bulletWithArrow"></span>
+                      </li>
+                      <li>Rebuilt trip input flow with progressive disclosure (support quick edits or skips)(outbound icon)
+
+                      </li>
+                      <li>
+                        Simplified category discovery to reduce time-to-cart
 
 
 
-                    </li>
-                    <li>Clear QP selection flow with upsells and fewer back buttons(outbound icon)
+                      </li>
+                      <li>Clear QP selection flow with upsells and fewer back buttons(outbound icon)
 
-                    </li>
-                    <li>Collapsed checkout — removed survey, trust/insurance copy now clearer(outbound icon)
-                    </li>
+                      </li>
+                      <li>Collapsed checkout — removed survey, trust/insurance copy now clearer(outbound icon)
+                      </li>
 
-                  </ul>
+                    </ul>
+                  </div>
                 </div>
 
 
@@ -217,28 +222,25 @@
       <div class="wrapper">
         <div class="Grid Grid--full Grid--gutter">
           <div class="Grid-cell">
-
-
             <div class="element">
-
-              <h3><span class="TextPoppins fontWeight400">Mobile App</span></h3>
+              <h3><span class=" fontWeight700">Mobile App (B2C)</span></h3>
             </div>
           </div>
-
-
-
-
         </div>
+
+
+
         <div class="Grid Grid--gutters Grid--cols-3">
           <div class="Grid-cell">
-            <h4> <strong class=""> Role: </strong> Lead UX Designer </h4>
+            <h5> <span class="colorBgYellowVW300 paddingXS borderRadiusS"> Role:</span> Lead UX Designer </h5>
           </div>
           <div class="Grid-cell">
-            <h4> <strong class=""> Stakeholder: </strong>Kim Connolly </h4>
+            <h5> <span class="colorBgYellowVW300 paddingXS borderRadiusS"> Scope:</span> Consumer rental flow</h5>
           </div>
           <div class="Grid-cell">
-            <h4> <strong class=""> Scope: </strong> Full mobile flow</h4>
+            <h5> <span class="colorBgYellowVW300 paddingXS borderRadiusS"> Stakeholder:</span> Kim Connolly </h5>
           </div>
+
         </div>
       </div>
 
@@ -247,31 +249,24 @@
       <div class="wrapper">
         <div class="Grid Grid--full Grid--gutter">
           <div class="Grid-cell">
-
-
             <div class="element">
-
               <h4><span class="TextPoppins fontWeight400">Key Contributions</span></h4>
-
               <div class="accItem">
                 <div class="accTrigger">
-
                   <h5>
                     <span class="accIcon iconSizeM"></span>
                     <a class="textUnderline fontWeight500" href="mobile_wireframe/">Full Rental Journey Wireframe </a>
                   </h5>
                 </div>
                 <div class="accContent">
+                  <div class="element">
 
-                  <ul class="listCircle ">
-                    <li>Mapped and wireframed the entire rental flow to validate architecture and reduce downstream issues</li>
-                  </ul>
+                    <ul class="listCircle ">
+                      <li>Mapped and wireframed the entire rental flow to validate architecture and reduce downstream issues</li>
+                    </ul>
+                  </div>
                 </div>
-
-
               </div>
-
-
               <div class="accItem">
                 <div class="accTrigger">
 
@@ -281,17 +276,16 @@
                   </h5>
                 </div>
                 <div class="accContent">
+                  <div class="element">
 
-                  <ul class="listCircle ">
-                    <li><strong>Problem:</strong> Mobile users needed a fast way to start booking, but also needed to understand how BabyQuip worked before committing.</li>
-                    <li><strong>Insight:</strong> Two user types emerged — those who wanted to search immediately and those who needed clarity before input.</li>
-                    <li><strong>Solution:</strong> Designed and tested two landing paths: one direct to trip input, and one educational layout with visuals, categories, and explainer content.</li>
-                  </ul>
+                    <ul class="listCircle ">
+                      <li><strong>Problem:</strong> Mobile users needed a fast way to start booking, but also needed to understand how BabyQuip worked before committing.</li>
+                      <li><strong>Insight:</strong> Two user types emerged — those who wanted to search immediately and those who needed clarity before input.</li>
+                      <li><strong>Solution:</strong> Designed and tested two landing paths: one direct to trip input, and one educational layout with visuals, categories, and explainer content.</li>
+                    </ul>
+                  </div>
                 </div>
-
-
               </div>
-
               <div class="accItem">
                 <div class="accTrigger">
 
@@ -301,11 +295,14 @@
                   </h5>
                 </div>
                 <div class="accContent">
-                  <ul class="listCircle">
-                    <li><strong>Problem:</strong> The original trip flow asked users to enter all info up front (address, dates, time), and offered no flexibility later, leading to drop-off and user frustration.</li>
-                    <li><strong>Insight:</strong> Most users accepted default time/date but wanted to adjust info after browsing gear availability.</li>
-                    <li><strong>Solution:</strong> Kept address as a required input, auto-filled the rest, and made trip info editable at any point in the flow.</li>
-                  </ul>
+                  <div class="element">
+
+                    <ul class="listCircle">
+                      <li><strong>Problem:</strong> The original trip flow asked users to enter all info up front (address, dates, time), and offered no flexibility later, leading to drop-off and user frustration.</li>
+                      <li><strong>Insight:</strong> Most users accepted default time/date but wanted to adjust info after browsing gear availability.</li>
+                      <li><strong>Solution:</strong> Kept address as a required input, auto-filled the rest, and made trip info editable at any point in the flow.</li>
+                    </ul>
+                  </div>
                 </div>
 
 
@@ -319,11 +316,14 @@
                   </h5>
                 </div>
                 <div class="accContent">
-                  <ul class="listCircle">
-                    <li><strong>Problem:</strong> Search was limited and error-prone — users needed to know exactly what to type, or they'd hit dead ends. At the same time, the business was preparing to expand into general gear rental with GoQuip, and users were unaware of the broader categories we offered.</li>
-                    <li><strong>Insight:</strong> We realized the shopping experience needed to shift from search-driven to exploration-first — it had to educate, guide discovery, and scale as new categories were added.</li>
-                    <li><strong>Solution:</strong> Designed a visual-first layout with a top category bar and “View All” fallback, adapted from the web. Emphasized category clarity, quick add-to-cart, and future scalability.</li>
-                  </ul>
+                  <div class="element">
+
+                    <ul class="listCircle">
+                      <li><strong>Problem:</strong> Search was limited and error-prone — users needed to know exactly what to type, or they'd hit dead ends. At the same time, the business was preparing to expand into general gear rental with GoQuip, and users were unaware of the broader categories we offered.</li>
+                      <li><strong>Insight:</strong> We realized the shopping experience needed to shift from search-driven to exploration-first — it had to educate, guide discovery, and scale as new categories were added.</li>
+                      <li><strong>Solution:</strong> Designed a visual-first layout with a top category bar and “View All” fallback, adapted from the web. Emphasized category clarity, quick add-to-cart, and future scalability.</li>
+                    </ul>
+                  </div>
                 </div>
 
 
@@ -337,54 +337,177 @@
                   </h5>
                 </div>
                 <div class="accContent">
-                  <ul class="listCircle">
-                    <li><strong>Problem:</strong> Users often changed their minds during QP selection, but the flow forced a reset or discouraged continuing.</li>
-                    <li><strong>Insight:</strong> Delaying QP selection and allowing gear edits during this step increased cart size and reduced confusion.</li>
-                    <li><strong>Solution:</strong> Designed logic to preserve cart state, supported QP preview/sort, and enabled item add-ons within the QP screen to increase AOV without friction.</li>
-                  </ul>
+                  <div class="element">
+
+                    <ul class="listCircle">
+                      <li><strong>Problem:</strong> Users often changed their minds during QP selection, but the flow forced a reset or discouraged continuing.</li>
+                      <li><strong>Insight:</strong> Delaying QP selection and allowing gear edits during this step increased cart size and reduced confusion.</li>
+                      <li><strong>Solution:</strong> Designed logic to preserve cart state, supported QP preview/sort, and enabled item add-ons within the QP screen to increase AOV without friction.</li>
+                    </ul>
+                  </div>
                 </div>
-
-
               </div>
               <div class="accItem">
                 <div class="accTrigger">
-
                   <h5>
                     <span class="accIcon iconSizeM"></span>
                     <a class="textUnderline fontWeight500" href="mobile_landing/">Checkout</a>
                   </h5>
                 </div>
                 <div class="accContent">
-                  <ul class="listCircle">
-                    <li>Removed friction (survey, excess steps)</li>
-                    <li>A/B tested single vs. multi-page flows for clarity and speed</li>
-                  </ul>
+                  <div class="element">
+                    <ul class="listCircle">
+                      <li>Removed friction (survey, excess steps)</li>
+                      <li>A/B tested single vs. multi-page flows for clarity and speed</li>
+                    </ul>
+                  </div>
                 </div>
-
-
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <%- include(`${templatePath}/shared/base_divider_short`) %>
+
+      <div class="wrapper">
+        <div class="Grid Grid--full Grid--gutter">
+          <div class="Grid-cell">
 
 
+            <div class="element">
 
+              <h3><span class=" fontWeight700">Inventory Management (Partner Portal / B2B)
+
+                </span></h3>
             </div>
           </div>
 
 
 
 
+        </div>
 
+
+
+
+        <div class="Grid Grid--gutters Grid--cols-2">
           <div class="Grid-cell">
-            <%- include(`${templatePath}/shared/base_divider`) %>
+            <h5> <span class="colorBgYellowVW300 paddingXS borderRadiusS"> Role:</span> Lead UX Designer </h5>
+          </div>
+          <div class="Grid-cell">
+            <h5> <span class="colorBgYellowVW300 paddingXS borderRadiusS"> Scope:</span> Gear listing & storefront control</h5>
+          </div>
+          <div class="Grid-cell">
+
+            <h5> <span class="colorBgYellowVW300 paddingXS borderRadiusS"> Stakeholder:</span> Joe Maier, Kim Connolly</h5>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="wrapper">
+        <div class="Grid Grid--full Grid--gutter">
+          <div class="Grid-cell">
+            <div class="element">
+              <h4><span class="TextPoppins fontWeight400">Key Contributions</span></h4>
+              <div class="accItem">
+                <div class="accTrigger">
+                  <h5>
+                    <span class="accIcon iconSizeM"></span>
+                    <a class="textUnderline fontWeight500" href="mobile_wireframe/">Redesign Inventory Management </a>
+                  </h5>
+                </div>
+                <div class="accContent">
+                  <div class="element">
+
+                    <ul class="listCircle ">
+                      <li>Mapped and wireframed the entire rental flow to validate architecture and reduce downstream issues</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
 
 
 
-            <%- include(`${templatePath}/shared/base_divider_short`) %>
-
-
-
+            </div>
           </div>
         </div>
       </div>
+
+      <%- include(`${templatePath}/shared/base_divider_short`) %>
+
+      <div class="wrapper">
+        <div class="Grid Grid--full Grid--gutter">
+          <div class="Grid-cell">
+
+
+            <div class="element">
+
+              <h3><span class=" fontWeight700">Responsive Web (B2C) </span></h3>
+            </div>
+          </div>
+
+
+
+
+        </div>
+        <div class="Grid Grid--gutters Grid--cols-3">
+          <div class="Grid-cell">
+            <h5> <span class="colorBgYellowVW300 paddingXS borderRadiusS">Role:</span> Support UX Designer </h5>
+          </div>
+
+          <div class="Grid-cell">
+            <h5> <span class="colorBgYellowVW300 paddingXS borderRadiusS"> Scope:</span> Gear-first rental flow optimization</h5>
+          </div>
+          <div class="Grid-cell">
+            <h5> <span class="colorBgYellowVW300 paddingXS borderRadiusS"> Stakeholder:</span> Kim Connolly </h5>
+          </div>
+        </div>
+      </div>
+      <div class="wrapper">
+        <div class="Grid Grid--full Grid--gutter">
+          <div class="Grid-cell">
+            <div class="element">
+              <h4><span class="TextPoppins fontWeight400">Key Contributions</span></h4>
+              <div class="accItem">
+                <div class="accTrigger">
+                  <h5>
+                    <span class="accIcon iconSizeM"></span>
+                    <a class="textUnderline fontWeight500" href="mobile_wireframe/">Filter Quick Fix </a>
+                  </h5>
+                </div>
+                <div class="accContent">
+                  <div class="element">
+
+                    <ul class="listCircle ">
+                      <li>Mapped and wireframed the entire rental flow to validate architecture and reduce downstream issues</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="accItem">
+                <div class="accTrigger">
+                  <h5>
+                    <span class="accIcon iconSizeM"></span>
+                    <a class="textUnderline fontWeight500" href="mobile_wireframe/">Map Color Enhancement </a>
+                  </h5>
+                </div>
+                <div class="accContent">
+                  <ul class="listCircle ">
+                    <li>Mapped and wireframed the entire rental flow to validate architecture and reduce downstream issues</li>
+                  </ul>
+                </div>
+              </div>
+
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <%- include(`${templatePath}/shared/base_divider`) %>
+
+      <div class="blankHXXS"></div>
+
     </div>
 
 
