--- a/templates/shared/base_divider_short.ejs
+++ b/templates/shared/base_divider_short.ejs
@@ -1,3 +1,5 @@
-<div class="blankHXS"></div>
+<div class="blankHTiny"></div>
+<div class="blankHTiny"></div>
+
 <hr class="wrapperXL">
 <div class="blankHXXS"></div>
