landing chip enhancement

--- a/templates/caselog/index.ejs
+++ b/templates/caselog/index.ejs
@@ -232,13 +232,13 @@
 
         <div class="Grid Grid--gutters Grid--cols-3">
           <div class="Grid-cell">
-            <h5> <span class="colorBgYellowVW300 paddingXS borderRadiusS"> Role:</span> Lead UX Designer </h5>
+            <h6> <span class="colorBgYellowVW100 borderRadiusS chipBorderPadding"> Role:</span> Lead UX Designer </h6>
           </div>
           <div class="Grid-cell">
-            <h5> <span class="colorBgYellowVW300 paddingXS borderRadiusS"> Scope:</span> Consumer rental flow</h5>
+            <h6> <span class="colorBgYellowVW100 borderRadiusS chipBorderPadding"> Scope:</span> Consumer rental flow</h6>
           </div>
           <div class="Grid-cell">
-            <h5> <span class="colorBgYellowVW300 paddingXS borderRadiusS"> Stakeholder:</span> Kim Connolly </h5>
+            <h6> <span class="colorBgYellowVW100 borderRadiusS chipBorderPadding"> Stakeholder:</span> Kim Connolly </h6>
           </div>
 
         </div>
@@ -250,7 +250,7 @@
         <div class="Grid Grid--full Grid--gutter">
           <div class="Grid-cell">
             <div class="element">
-              <h4><span class="TextPoppins fontWeight400">Key Contributions</span></h4>
+              <h5><span class="fontWeight400">Contributions</span></h5>
               <div class="accItem">
                 <div class="accTrigger">
                   <h5>
@@ -392,14 +392,14 @@
 
         <div class="Grid Grid--gutters Grid--cols-2">
           <div class="Grid-cell">
-            <h5> <span class="colorBgYellowVW300 paddingXS borderRadiusS"> Role:</span> Lead UX Designer </h5>
+            <h6> <span class="colorBgYellowVW100 borderRadiusS chipBorderPadding"> Role:</span> Lead UX Designer </h6>
           </div>
           <div class="Grid-cell">
-            <h5> <span class="colorBgYellowVW300 paddingXS borderRadiusS"> Scope:</span> Gear listing & storefront control</h5>
-          </div>
-          <div class="Grid-cell">
+            <h6> <span class="colorBgYellowVW100 borderRadiusS chipBorderPadding"> Scope:</span> Gear listing & storefront control </h6>
 
-            <h5> <span class="colorBgYellowVW300 paddingXS borderRadiusS"> Stakeholder:</span> Joe Maier, Kim Connolly</h5>
+          </div>
+          <div class="Grid-cell">
+            <h6> <span class="colorBgYellowVW100 borderRadiusS chipBorderPadding"> Stakeholder:</span> Joe Maier, Kim Connolly</h6>
           </div>
 
         </div>
@@ -409,7 +409,7 @@
         <div class="Grid Grid--full Grid--gutter">
           <div class="Grid-cell">
             <div class="element">
-              <h4><span class="TextPoppins fontWeight400">Key Contributions</span></h4>
+              <h5><span class="fontWeight400">Contributions</span></h5>
               <div class="accItem">
                 <div class="accTrigger">
                   <h5>
@@ -453,14 +453,16 @@
         </div>
         <div class="Grid Grid--gutters Grid--cols-3">
           <div class="Grid-cell">
-            <h5> <span class="colorBgYellowVW300 paddingXS borderRadiusS">Role:</span> Support UX Designer </h5>
+            <h6> <span class="colorBgYellowVW100 borderRadiusS chipBorderPadding"> Role:</span> Support UX Designer </h6>
           </div>
 
           <div class="Grid-cell">
-            <h5> <span class="colorBgYellowVW300 paddingXS borderRadiusS"> Scope:</span> Gear-first rental flow optimization</h5>
+            <h6> <span class="colorBgYellowVW100 borderRadiusS chipBorderPadding"> Scope:</span> Gear-first rental flow optimization</h6>
+
+      
           </div>
           <div class="Grid-cell">
-            <h5> <span class="colorBgYellowVW300 paddingXS borderRadiusS"> Stakeholder:</span> Kim Connolly </h5>
+            <h6> <span class="colorBgYellowVW100 borderRadiusS chipBorderPadding"> Stakeholder:</span> Kim Connolly </h6>
           </div>
         </div>
       </div>
@@ -468,7 +470,7 @@
         <div class="Grid Grid--full Grid--gutter">
           <div class="Grid-cell">
             <div class="element">
-              <h4><span class="TextPoppins fontWeight400">Key Contributions</span></h4>
+              <h5><span class="fontWeight400">Contributions</span></h5>
               <div class="accItem">
                 <div class="accTrigger">
                   <h5>
