--- a/templates/main.css
+++ b/templates/main.css
@@ -18,6 +18,7 @@
   --border-radiusXL: 1.25em;
   --border-radiusMax: 50%;
 
+  --paddingXXS: 3px 3px;
   --paddingXS: 6px 6px;
   --paddingS: 12px 12px;
   --paddingM: 18px 18px;
@@ -4266,7 +4267,10 @@ body .flex-container.Mobile {
 .border {
   border: 1px solid #4c665b;
 }
-
+.chipBorderPadding {
+  border: 1px solid var(--VW--Yellow300);
+  padding: 1px 6px 3px 6px; /*TRBL*/
+}
 .colorBorderL {
   border-left-style: solid;
   border-left-color: #fed256;
@@ -4824,6 +4828,10 @@ body .flex-container.Mobile {
 /* ======== paddings ========= */
 .fitContent {
   width: fit-content;
+}
+
+.paddingXXS {
+  padding: var(--paddingXXS);
 }
 
 .paddingXS {
