--- a/templates/caselog/index.ejs
+++ b/templates/caselog/index.ejs
@@ -31,8 +31,7 @@
 
           <h1 class="fontWeight700 newLandingTitle">a UX designer focused on clean, scalable experiences that drive real impact.
           </h1>
-          <h5 class="fontWeight300">I’ve redesigned full rental flows for mobile marketplaces, improved onboarding and checkout in both B2C and B2B contexts, and built design systems that scale. Currently deepening my frontend skills in JavaScript and React to better bridge design and development.
-
+          <h5 class="fontWeight300">Led end-to-end rental experience redesigns for consumer and partner tools across B2C/B2B. I focus on simplifying flows, aligning system logic, and increasing product clarity. Currently expanding frontend skills (JS/React) to bridge design and dev.
 
           </h5>
 
@@ -145,7 +144,7 @@
                 <div class="accTrigger">
 
                   <h5>
-                    <span class="accIcon iconSizeS"></span>
+                    <span class="accIcon iconAccTrigger"></span>
 
                     <span class="TextPoppins fontWeight400">My focus: </span>
                     Aligning the mobile app and partner tools with the company's shift to a gear-first rental model. I worked across core B2C and B2B flows to simplify UX, improve clarity, and support conversion.
@@ -154,13 +153,14 @@
                 <div class="accContent">
                   <div class="element">
 
-                  <ul class="listCircle ">
-                    <li>Before I joined, the team had redesigned the gear-first website in mid-2024. I supported final refinements and helped launch it in early 2025.
-                    </li>
-                    <li>
-                      The company will rebrand as GoQuip in 2025, expanding from baby gear only to general gear rental.
-                    </li>
-                  </ul></div>
+                    <ul class="listCircle ">
+                      <li>Before I joined, the team had redesigned the gear-first website in mid-2024. I supported final refinements and helped launch it in early 2025.
+                      </li>
+                      <li>
+                        The company will rebrand as GoQuip in 2025, expanding from baby gear only to general gear rental.
+                      </li>
+                    </ul>
+                  </div>
                 </div>
 
 
@@ -172,10 +172,10 @@
                 <div class="accTrigger">
 
                   <h5>
-                    <span class="accIcon iconSizeS"></span>
+                    <span class="accIcon iconAccTrigger"></span>
 
                     <span class="TextPoppins fontWeight400">Impact: </span>
-                    Increased clarity and mobile conversion by simplifying key decisions and aligning with gear-first web logic.
+                    Redesigned rental experience around a gear-first model — simplified entry points, streamlined shopping, and increased 7% mobile conversions.
                   </h5>
 
                 </div>
@@ -185,7 +185,7 @@
                     <ul class="listCircle">
                       <li>Rebuilt gear first flow overall in wireframe, test early, ensure everything works proper, saving time for later on back and force <span class="bulletWithArrow"></span>
                       </li>
-                      <li>Rebuilt trip input flow with progressive disclosure (support quick edits or skips)(outbound icon)
+                      <li>Rebuilt trip input flow with progressive disclosure (support quick edits or skips)
 
                       </li>
                       <li>
@@ -194,10 +194,10 @@
 
 
                       </li>
-                      <li>Clear QP selection flow with upsells and fewer back buttons(outbound icon)
+                      <li>Clear QP selection flow with upsells and fewer back buttons
 
                       </li>
-                      <li>Collapsed checkout — removed survey, trust/insurance copy now clearer(outbound icon)
+                      <li>Collapsed checkout — removed survey, trust/insurance copy now clearer
                       </li>
 
                     </ul>
@@ -215,7 +215,6 @@
       </div>
 
 
-      <div class="blankHXXS"></div>
 
 
 
@@ -224,11 +223,20 @@
           <div class="Grid-cell">
             <div class="element">
               <h3><span class=" fontWeight700">Mobile App (B2C)</span></h3>
+
+
             </div>
           </div>
         </div>
 
 
+        <div class="Grid Grid--full Grid--gutter">
+          <div class="Grid-cell">
+            <div class="element">
+                <img src="placeholder.png" alt="">
+            </div>
+          </div>
+        </div>
 
         <div class="Grid Grid--gutters Grid--cols-3">
           <div class="Grid-cell">
@@ -247,15 +255,16 @@
 
 
       <div class="wrapper">
-        <div class="Grid Grid--full Grid--gutter">
+        <div class="Grid Grid--gutters Grid--full">
           <div class="Grid-cell">
             <div class="element">
               <h5><span class="fontWeight400">Contributions</span></h5>
               <div class="accItem">
                 <div class="accTrigger">
                   <h5>
-                    <span class="accIcon iconSizeM"></span>
+                    <span class="accIcon iconAccTrigger"></span>
                     <a class="textUnderline fontWeight500" href="mobile_wireframe/">Full Rental Journey Wireframe </a>
+                    
                   </h5>
                 </div>
                 <div class="accContent">
@@ -271,7 +280,7 @@
                 <div class="accTrigger">
 
                   <h5>
-                    <span class="accIcon iconSizeM"></span>
+                    <span class="accIcon iconAccTrigger"></span>
                     <a class="textUnderline fontWeight500" href="mobile_landing/">Landing</a>
                   </h5>
                 </div>
@@ -290,7 +299,7 @@
                 <div class="accTrigger">
 
                   <h5>
-                    <span class="accIcon iconSizeM"></span>
+                    <span class="accIcon iconAccTrigger"></span>
                     <a class="textUnderline fontWeight500" href="mobile_landing/">Trip Info</a>
                   </h5>
                 </div>
@@ -311,7 +320,7 @@
                 <div class="accTrigger">
 
                   <h5>
-                    <span class="accIcon iconSizeM"></span>
+                    <span class="accIcon iconAccTrigger"></span>
                     <a class="textUnderline fontWeight500" href="mobile_landing/">Shopping</a>
                   </h5>
                 </div>
@@ -332,7 +341,7 @@
                 <div class="accTrigger">
 
                   <h5>
-                    <span class="accIcon iconSizeM"></span>
+                    <span class="accIcon iconAccTrigger"></span>
                     <a class="textUnderline fontWeight500" href="mobile_landing/">Cart & QP Selection</a>
                   </h5>
                 </div>
@@ -350,7 +359,7 @@
               <div class="accItem">
                 <div class="accTrigger">
                   <h5>
-                    <span class="accIcon iconSizeM"></span>
+                    <span class="accIcon iconAccTrigger"></span>
                     <a class="textUnderline fontWeight500" href="mobile_landing/">Checkout</a>
                   </h5>
                 </div>
@@ -372,21 +381,20 @@
       <div class="wrapper">
         <div class="Grid Grid--full Grid--gutter">
           <div class="Grid-cell">
-
-
             <div class="element">
-
               <h3><span class=" fontWeight700">Inventory Management (Partner Portal / B2B)
-
                 </span></h3>
             </div>
           </div>
-
-
-
-
         </div>
 
+        <div class="Grid Grid--full Grid--gutter">
+          <div class="Grid-cell">
+            <div class="element">
+                <img src="placeholder.png" alt="">
+            </div>
+          </div>
+        </div>
 
 
 
@@ -413,7 +421,7 @@
               <div class="accItem">
                 <div class="accTrigger">
                   <h5>
-                    <span class="accIcon iconSizeM"></span>
+                    <span class="accIcon iconAccTrigger"></span>
                     <a class="textUnderline fontWeight500" href="mobile_wireframe/">Redesign Inventory Management </a>
                   </h5>
                 </div>
@@ -446,11 +454,15 @@
               <h3><span class=" fontWeight700">Responsive Web (B2C) </span></h3>
             </div>
           </div>
-
-
-
-
         </div>
+        <div class="Grid Grid--full Grid--gutter">
+          <div class="Grid-cell">
+            <div class="element">
+                <img src="placeholder.png" alt="">
+            </div>
+          </div>
+        </div>
+
         <div class="Grid Grid--gutters Grid--cols-3">
           <div class="Grid-cell">
             <h6> <span class="colorBgYellowVW100 borderRadiusS chipBorderPadding"> Role:</span> Support UX Designer </h6>
@@ -459,7 +471,7 @@
           <div class="Grid-cell">
             <h6> <span class="colorBgYellowVW100 borderRadiusS chipBorderPadding"> Scope:</span> Gear-first rental flow optimization</h6>
 
-      
+
           </div>
           <div class="Grid-cell">
             <h6> <span class="colorBgYellowVW100 borderRadiusS chipBorderPadding"> Stakeholder:</span> Kim Connolly </h6>
@@ -474,7 +486,7 @@
               <div class="accItem">
                 <div class="accTrigger">
                   <h5>
-                    <span class="accIcon iconSizeM"></span>
+                    <span class="accIcon iconAccTrigger"></span>
                     <a class="textUnderline fontWeight500" href="mobile_wireframe/">Filter Quick Fix </a>
                   </h5>
                 </div>
@@ -490,7 +502,7 @@
               <div class="accItem">
                 <div class="accTrigger">
                   <h5>
-                    <span class="accIcon iconSizeM"></span>
+                    <span class="accIcon iconAccTrigger"></span>
                     <a class="textUnderline fontWeight500" href="mobile_wireframe/">Map Color Enhancement </a>
                   </h5>
                 </div>
