--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -59,9 +59,11 @@
     </a>
 
     <h1>Sections</h1>
-
-    <a href="section_chatGPT/">
-      <h3 class="textUnderline">Practice with ChatGPT</h3>
+    <a href="section_chatGPT_0525/">
+      <h3 class="textUnderline">Practice with ChatGPT(0525)</h3>
+    </a>
+    <a href="section_chatGPT_0425/">
+      <h3 class="textUnderline">Practice with ChatGPT(0425)</h3>
     </a>
     <a href="section_two">
       <h3 class="textUnderline">Section 2</h3>
