--- a/templates/javascript-learning/section_chatGPT_0425/index.html
+++ b/templates/javascript-learning/section_chatGPT_0425/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Practice with ChatGPT</title>
+  <title>Practice with ChatGPT(04/2025) </title>
 </head>
 
 <body class="wrapper">
   <div>
     <div>
-      <h1>Practice with ChatGPT</h1>
+      <h1>Practice with ChatGPT (04/2025) </h1>
     </div>
 
 
