--- a/templates/javascript-learning/section_chatGPT_0525/index.html
+++ b/templates/javascript-learning/section_chatGPT_0525/index.html
@@ -13,12 +13,17 @@
 
   <hr>
   <!-- lesson 1-->
-
+  <input id="numberInput" type="number" placeholder="Enter a number" />
+  <div id="resultArea"></div>
+  
 
   <hr>
 
   <!-- lesson 2-->
-
+  <input id="slider" type="range" min="1" max="100" value="5" />
+  <div id="arrayList"></div>
+  
+  
  
   <hr>
 
