--- a/templates/javascript-learning/section_chatGPT_043025/index.html
+++ b/templates/javascript-learning/section_chatGPT_043025/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Practice with ChatGPT(05/2025) </title>
+  <title>Practice with ChatGPT(04/30/2025) </title>
 </head>
 
 <body class="wrapper">
-  <h1>Practice with ChatGPT(05/2025) </h1>
+  <h1>Practice with ChatGPT(04/30/2025) </h1>
 
   <hr>
   <!-- lesson 1-->
@@ -20,13 +20,27 @@
   <hr>
 
   <!-- lesson 2-->
+  <select id="filterType">
+    <option value="even">Even</option>
+    <option value="odd">Odd</option>
+    <option value="all">All</option>
+  </select>
+  
   <input id="slider" type="range" min="1" max="100" value="5" />
   <div id="arrayList"></div>
   
   
  
   <hr>
+    <!-- lesson 3-->
+    <select id="divisibleBy">
+      <option value="none">No Filter</option>
+      <option value="3">Divisible by 3</option>
+      <option value="5">Divisible by 5</option>
+    </select>
+    
 
+  
 
 
 
