--- a/templates/caselog/index.ejs
+++ b/templates/caselog/index.ejs
@@ -271,10 +271,13 @@
           <div class="Grid-cell">
             <div class="element accItem">
               <div class="accTrigger">
-                <h4 class="fontWeight400">
-                  <span class="accIcon iconAccTrigger"></span>
-                  <span> Full Rental Journey Wireframe</span>
-                </h4>
+                <div class="row">
+                  <div class="accIcon iconAccTrigger"></div>
+                  <div>
+                    <h4 class="fontWeight400">Full Rental Journey Wireframe</h4>
+                    <h5>Mapped and wireframed the entire rental flow to validate architecture and reduce downstream issues</h5>
+                  </div>
+                </div>
                 <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg">View Case Study</button></a>
 
               </div>
@@ -538,7 +541,7 @@
               <div class="accContent">
                 <div class="element">
                   <ul class="listCircle ">
-                    <li>Mapped and wireframed the entire rental flow to validate architecture and reduce downstream issues</li>
+                    <li>x</li>
                   </ul>
                 </div>
               </div>
@@ -559,7 +562,7 @@
               <div class="accContent">
                 <div class="element">
                   <ul class="listCircle ">
-                    <li>Mapped and wireframed the entire rental flow to validate architecture and reduce downstream issues</li>
+                    <li>x</li>
                   </ul>
                 </div>
               </div>
