--- a/templates/workroom/index.ejs
+++ b/templates/workroom/index.ejs
@@ -126,7 +126,7 @@
   <div class="wrapper displayLaptop">
     <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
       <div class="element">
-        <a href="/resume"> <button class="buttonLarge buttonPrimary bgVWGrey">Resume & Experience
+        <a href="/resume2025"> <button class="buttonLarge buttonPrimary bgVWGrey">Resume & Experience
           </button></a>
 
       </div>
@@ -139,7 +139,7 @@
   <div class="wrapper displayTablet">
     <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
       <div class="element">
-        <a href="/resume"> <button class="buttonLarge buttonPrimary bgVWGrey">Resume & Experience
+        <a href="/resume2025"> <button class="buttonLarge buttonPrimary bgVWGrey">Resume & Experience
           </button></a>
 
       </div>
@@ -152,7 +152,7 @@
   <div class="wrapper displayPhone">
     <div class="Grid Grid--full Grid--gutters">
       <div class="element">
-        <a href="/resume"> <button class="buttonLarge buttonPrimary bgVWGrey">Resume & Experience
+        <a href="/resume2025"> <button class="buttonLarge buttonPrimary bgVWGrey">Resume & Experience
           </button></a>
 
       </div>
